<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="ca.yorku.melodiam.Instructions">

    <ScrollView
        android:layout_width="380dp"
        android:layout_height="400dp"
        android:layout_marginBottom="30dp"
        android:background="@color/pink_100"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/close_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/inst_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/allerta"
                android:text="@string/inst_title"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/navy_500"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/instructions1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/allerta"
                android:text="@string/instructions1"
                android:textColor="@color/grey_300"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/instructions2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/allerta"
                android:text="@string/instructions2"
                android:textColor="@color/grey_300"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/instructions3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/allerta"
                android:text="@string/instructions3"
                android:textColor="@color/grey_300"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/close_button"
        android:layout_width="285dp"
        android:layout_height="61dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/yellow_300"
        android:text="@string/close"
        app:cornerRadius="@dimen/round_corners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>